--- a/PromoteIt.Campaign/PromoteIt.Server.csproj
+++ b/PromoteIt.Campaign/PromoteIt.Server.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.1.1" />
+    <PackageReference Include="RestSharp" Version="108.0.3" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ProLobby.Entities\PromoteIt.Entities.csproj" />
